Update code for Java 11 deprecations, issue #283